<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/my_custom_font"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/my_custom_font"
        android:background="@android:color/white"
        android:hint="Name"
        android:inputType="textPersonName"
        android:padding="10dp" />
    <EditText
        android:id="@+id/etmobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/my_custom_font"
        android:background="@android:color/white"
        android:hint="Mobile"
        android:inputType="number"
        android:padding="10dp" />
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/my_custom_font"
        android:background="@android:color/white"
        android:hint="Email"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/my_custom_font"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/my_custom_font"
        android:background="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#f05924"
        android:fontFamily="@font/my_custom_font"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/my_custom_font"
        android:text="@string/already_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:fontFamily="@font/my_custom_font"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

</LinearLayout>
    </ScrollView>
</LinearLayout>